# ion

./: .gitignore  AGENTS.md  ARCH_REVIEW.md  BACKEND_TYPES.md  BASH_API_CHECKLIST.md  BASH_EXTENSION.md  BASH_EXTENSION_TUTORIAL.md  BASH_PLUGIN.md  BASH_PLUGIN_TUTORIAL.md  CHANGELOG.md  CLI_USAGE.md  CONTRIBUTING.md  Cargo.toml  DEPLOY_ARCH.md  EXTENSION_MANUAL_TEMPLATE.md  EXTENSION_SYSTEM.md  EXTENSION_WORKFLOW.md  HOOK_SYSTEM.md  MEMORY_PLUGIN.md  MEMORY_SPEC.md  Makefile  PERMISSION_SYSTEM.md  PI_RPC_ALIGNMENT.md  PLUGIN_MANUAL_TEMPLATE.md  PLUGIN_SYSTEM.md  PLUGIN_WORKFLOW.md  PROVIDER_PROTOCOL.md  README.md  ROUTER_TEST_SPEC.md  SECURITY.md  SECURITY_CLI_GUIDE.md  SESSION_MESSAGE.md  SESSION_MESSAGE_TYPES.md  TEAM_ARCH.md  TEST_CASES.md  assistant_response.txt  auto_greeting.txt  command_log.txt  final_greeting.txt  greeting.txt  (+18 more)
.ion/: settings.json
dashboard/: package.json  test-e2e.sh  tsconfig.json
docs/: README.md
examples/: README.md
hello-extension/: Cargo.toml
ion-dashboard-ui/: ion-dashboard-ui.design  orchestration-summary.json
ion-provider/: Cargo.toml
ion-provider/src/: auth.rs  env_keys.rs  error.rs  event_stream.rs  faux.rs  lib.rs  paths.rs  record.rs  registry.rs  replay.rs  transform_messages.rs  types.rs
ion-provider/src/provider/: anthropic.rs  azure.rs  bedrock.rs  cloudflare.rs  codex.rs  google.rs  mistral.rs  mod.rs  openai.rs  openai_responses.rs  vertex.rs
ion-provider/tests/: e2e_real_api.rs  faux_test.rs  overflow_test.rs  record_replay_test.rs  sse_parse_test.rs  unicode_test.rs
plan-plugin/: Cargo.toml
scripts/: Dockerfile.evolve  evolve-run.sh  evolve.sh  evolve_auto.sh  evolve_batch.sh  evolve_concurrent.sh  evolve_loop.sh  evolve_native.sh  evolve_parallel.sh  evolve_pr.sh  evolve_self.sh  evolve_tests.sh  evolve_verify.sh  hooks_test.sh  improver.sh  init-evolve-container.sh  self_test.sh  trigger_user.sh  user_simulation.sh  watchdog.sh
src/: agent_config.rs  auth.rs  backend_registry.rs  command_guard.rs  config.rs  context_reclaimer.rs  error.rs  event.rs  event_bus.rs  export.rs  file_time_guard.rs  global_memory.rs  global_memory_ext.rs  (+22 more)
(+312 files in other folders)
