[package]
name = "ion-provider"
version = "0.2.0"
edition = "2024"
description = "LLM provider abstraction for ION — OpenAI-compatible streaming, tool calls"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
futures-util = "0.3"
thiserror = "2"
regex = "1"
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
tempfile = "3"
